[gd_scene load_steps=8 format=3 uid="uid://bgtnl1hwmny64"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_nquv5"]
[ext_resource type="Texture2D" uid="uid://r665h1vjcxqa" path="res://assets/light-iso.png" id="3_22jw8"]
[ext_resource type="PackedScene" uid="uid://dx5l6w2qm1gay" path="res://entitites/weapons/pistol.tscn" id="4_q177l"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kmbbx"]
size = Vector2(20, 30)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5rsor"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_my4c5"]
light_mode = 2

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0eh1e"]
size = Vector2(20, 2)

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_nquv5")
camera = "camera_drag"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_speed = 10.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = SubResource("PlaceholderTexture2D_kmbbx")
offset = Vector2(0, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5rsor")

[node name="Pistol" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_q177l")]
player = NodePath("..")

[node name="ShadowCaster" type="PointLight2D" parent="."]
scale = Vector2(1.5, 1.5)
shadow_enabled = true
texture = ExtResource("3_22jw8")

[node name="ShadowCaster2" type="PointLight2D" parent="."]
scale = Vector2(1.5, 1.5)
range_item_cull_mask = 2
texture = ExtResource("3_22jw8")

[node name="EnemyCulling" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnemyCulling"]
visible = false
polygon = PackedVector2Array(-365, -12, -345, -49, -322, -57, -304, -63, -293, -106, -308, -110, -289, -134, -266, -139, -230, -172, -238, -191, -210, -200, -184, -198, -101, -231, -5, -250, 108, -230, 241, -176, 304, -121, 325, -82, 361, -69, 379, -33, 376, -2, 340, 22, 337, 42, 342, 69, 315, 98, 281, 110, 258, 101, 266, 134, 235, 139, 200, 145, 115, 185, 1, 204, -90, 216, -133, 195, -153, 133, -219, 101, -230, 115, -313, 105, -379, 42, -378, 19)

[node name="Flicker" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
z_index = 1
material = SubResource("CanvasItemMaterial_my4c5")
custom_minimum_size = Vector2(20, 2)
offset_left = -10.0
offset_top = -17.0
offset_right = 10.0
offset_bottom = -15.0
texture_progress = SubResource("PlaceholderTexture2D_0eh1e")

[connection signal="body_entered" from="EnemyCulling" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="EnemyCulling" to="." method="_on_area_2d_2_body_exited"]
[connection signal="timeout" from="Flicker" to="." method="_on_flicker_timeout"]
